--- a/client/directives/inject.jade
+++ b/client/directives/inject.jade
@@ -1,6 +1,11 @@
 meta(name='viewport', content='width=device-width,height=device-height, initial-scale=1')
 meta(http-equiv='Content-Type', content='text/html; charset=UTF-8')
 
-link(rel='stylesheet', type='text/css', href='semantic/dist/semantic.min.css')
-script(src='https://code.jquery.com/jquery-3.1.1.min.js', integrity='sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=', crossorigin='anonymous')
-script(src='semantic/dist/semantic.min.js')
+link(href='https://fonts.googleapis.com/icon?family=Material+Icons', rel='stylesheet')
+link(href='css/materialize.css', type='text/css', rel='stylesheet', media='screen,projection')
+link(href='css/style.css', type='text/css', rel='stylesheet', media='screen,projection')
+link(href='css/form_wrapper.css', type='text/css', rel='stylesheet', media='screen,projection')
+
+script(src='https://code.jquery.com/jquery-2.1.1.min.js')
+script(src='js/materialize.js')
+script(src='js/init.js')
