--- a/client/index.jade
+++ b/client/index.jade
@@ -7,7 +7,9 @@ html(lang='en')
 		include directives/inject.jade
 		
 	body(ng-app='fileUpload')
-		h1 Secure File Storage 1.0
+		include directives/nav_inject.jade
+		
+		br
 		form(ng-controller='MyCtrl as up', name='up.upload_form')
 			| Single Image with validations
 			input(type='file', ngf-select='', ng-model='up.file', name='file', ngf-pattern="'image/*'", accept='image/*', ngf-max-size='20MB')
