Typo Fix & Use Bower instead of NPM for CryptoJS package on Client-side

--- a/client/index.jade
+++ b/client/index.jade
@@ -29,4 +29,5 @@ html(lang='en')
 	script(type='text/javascript', src='node_modules/angular/angular.min.js')
 	script(type='text/javascript', src='node_modules/ng-file-upload/dist/ng-file-upload.min.js')
 	script(type='text/javascript', src='node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js')
+	script(type='text/javascript', src='bower_components/crypto-js/crypto-js.js')
 	script(type='text/javascript', src='main.js')
