--- a/client/directives/inject.jade
+++ b/client/directives/inject.jade
@@ -9,3 +9,8 @@ link(href='css/form_wrapper.css', type='text/css', rel='stylesheet', media='scre
 script(src='https://code.jquery.com/jquery-2.1.1.min.js')
 script(src='js/materialize.js')
 script(src='js/init.js')
+
+script(type='text/javascript', src='node_modules/angular/angular.min.js')
+script(type='text/javascript', src='node_modules/ng-file-upload/dist/ng-file-upload.min.js')
+script(type='text/javascript', src='node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js')
+script(type='text/javascript', src='main.js')
