--- a/client/directives/nav_inject.jade
+++ b/client/directives/nav_inject.jade
@@ -5,17 +5,17 @@ nav.white.pos_fix(role='navigation')
       li
         a(href='#')
           i.material-icons.right exit_to_app
-          | เข้าสู่ระบบ
+          | Log In
     ul#nav-mobile.side-nav
       li &nbsp;
       li.grey.lighten-5
         a(href='#')
           i.material-icons.left home
-          .font_1dot4 หน้าแรก
+          .font_1dot4 Home
       li.grey.lighten-5
         a(href='#')
           i.material-icons.left exit_to_app
-          .font_1dot4 เข้าสู่ระบบ
+          .font_1dot4 Log In
     a.button-collapse(href='#', data-activates='nav-mobile')
       i.material-icons menu
 nav.white(role='navigation')
